# TinyLLaVA_Factory

./: .gitignore  .readthedocs.yaml  CUSTOM_FINETUNE.md  LICENSE  README.md  config_new.yaml  config_original.yaml  gen_temp_checkpoint.py  inference.py  pyproject.toml  pytest.ini  temp_run.py  tinyllava_visualizer.py
.github/workflows/: main.yml
assets/: assets_list.txt
configs/data/: llava-v15-pretrain.yml
configs/model/: phi.yml
configs/training/: phi-pretrain.yml
demo/: constants.py  conversation.py  demo.py
docs/: CUTOM_FINETUNE.md  Evaluation.md  Finetune_custom_data.md
scripts/: convert_answer_to_mmmu.py  convert_gqa_for_eval.py  convert_mmbench_for_submission.py  convert_mmvet_for_eval.py  convert_seed_for_submission.py  convert_sqa_to_llava.py  convert_sqa_to_llava_base_prompt.py  convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py  dummy_launch_pretrain.sh  extract_mm_projector.py  finetune.sh  finetune_full_schedule.sh  finetune_lora.sh  finetune_qlora.sh  finetune_sqa.sh  merge_lora_weights.py  pretrain.sh  pretrain_xformers.sh  sqa_eval_batch.sh  sqa_eval_gather.sh  test_args.sh  test_new_args.py  test_original_args.py  zero3_npu.json
scripts/eval/: gqa.sh  mme.sh  mmmu.sh  mmvet.sh  pope.sh  sqa.sh  textvqa.sh  vqav2.sh
scripts/tiny_llava/: finetune.sh  finetune_lora.sh  finetune_lora_type3.sh  finetune_type4.sh  pretrain.sh  pretrain_baselines.sh  pretrain_type4.sh  train_baselines.sh  train_baselines_phi_jia.sh  zero2.json  zero3.json
scripts/train/: custom_finetune.sh  finetune.sh  pretrain.sh  train_mof.sh  train_phi.sh  train_qwen.sh  train_stablelm.sh  train_tinyllama.sh
scripts/train_npu/: custom_finetune.sh  finetune.sh  pretrain.sh  readme.md  train_mof.sh  train_phi.sh  train_stablelm.sh  train_tinyllama.sh
source/: Data.rst  Evaluation.rst  Installation.rst  Prepare Datasets.rst  Train.rst  Training.rst  conf.py  index.rst  requirements.txt
src/: Data.py  Model.py  Training.py
tests/data/: test_template.py  (+1 more)
tinyllava/: __init__.py  arguments.py  conversation.py  mm_utils.py  utils.py
tinyllava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tinyllava_visualizer/: README.md  inference_example.py  tinyllava_visualizer.py
visualizer/: inference.py
(+218 files in other folders)
